# codenames-backend

./: .flake8  .gitignore  README.md  app.py  load_words.py  populate_tables.py  pyproject.toml  requirements.txt  template.env  words.txt
codenames_backend/: __init__.py
codenames_backend/methods/: utility.py
codenames_backend/models/: __init__.py  cards.py  games.py  languages.py  players.py  rooms.py  words.py
codenames_backend/routes/: cards.py  errors.py  games.py  languages.py  rooms.py  sockets.py  words.py
data/words/: .gitignore  words_en.txt
migrations/: env.py
migrations/versions/: 13accd7b360b_.py  13accd7b360b_20200425_added_room_and_player.py  25c26353c300_20200420_reset_migrations.py  32a9b7b14f24_20200419_added_games.py  5e9e7211948c_20200419_added_words.py  a5b770d8f610_store_captains_on_game.py  a9dc26444d5c_20200425_added_spymaster_status_to_.py  c1674b900fad_add_player_table.py  cc1d7c472889_20200418_initial_migration.py  fd953c6db722_20200905_included_language_in_word_game_.py
tests/: test_codenames_backend.py
