[tool.poetry]
name = "codenames-backend"
version = "0.1.0"
description = ""
authors = ["Marlan Perumal <marlan.perumal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
