[tool.poetry]
name = "codenames-backend"
version = "0.1.0"
description = ""
authors = ["Marlan Perumal <marlan.perumal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"
python-dotenv = "^0.13.0"
flask-socketio = "^4.2.1"
eventlet = "^0.25.2"
flask-sqlalchemy = "^2.4.1"
flask-migrate = "^2.5.3"
flask-marshmallow = "^0.11.0"
marshmallow-sqlalchemy = "^0.22.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
black = "^19.10b0"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
